    - Addresses https://github.com/TownyAdvanced/SiegeWar/issues/72
  - Update spanish.yml, courtesy of ElMoha943 with PR #4722.
  - Update es-419.yml, courtesy of EuGNosii with PR #4723.
  - API: add convenience methods to TownyAPI:
    - getNation(name)
    - getTown(name)
    - getResident(name)
    - getNation(uuid)
    - getTown(uuid)
    - getResident(uuid)
  - Fix goofy replacing in TownySpigotMessaging sendSpigotConfirmMessage.
  - Fix regression in GUIs which made inventories unusable.
  - Fix "/res toggle reset" not resetting modes.
    - Closes #4730.
  - Fix empty-selection message showing when claiming single plots is blocked because the area is actually already claimed.
    - Closes #4729.
  - Custom Metadata Types, courtesy of silverwolfg11 with PR #4700.
  - Small HUDManager overhaul, courtesy of Warriorrrr with PR #4726.
  - API: new damage/pvp events:
    - TownBlockPVPTestEvent - thrown when a townblock in a town has the PVP status decided.
    - WildernessPVPTestEvent - thrown when determining what the wilderness status for PVP is.
    - TownyDamageEvent - Abstract event for the following:
    - TownyPlayerDamagePlayerEvent - used to override players hurting players.
    - TownyExplosionDamagesEntityEvent (Part of the earlier API expansion, now moved to the damage package and extending the TownyDamageEvent.)
  - Fix nation merging.
    - Closes #4732.
  - Fix BookFactory skipping the 15th line of a book.
  - Add towny.command.plot.perm.hud to the nomad group in townyperms.yml by default.
  - Add townyadmin command for giving/removing nation ranks, courtesy of Warriorrrr with PR #4736.
0.96.7.2:
  - Fix /ta command for setting town title/surnames not respecting the admin override.
    - Closes #4741.
  - Fix event war plot attacking not working.
    - Closes #4740.
  - Fix free town/nation rename exploit, courtesy of Warriorrrr with PR #4743.