@@ -5812,3 +5812,4 @@ v0.92.0.11:
   - Fix event war plot attacking not working.
     - Closes #4740.
   - Fix free town/nation rename exploit, courtesy of Warriorrrr with PR #4743.
+  - Fix potential safe mode from removing corrupted nation which cannot return a king.
